fix/alignment

--- a/src/main/webapp/resources/css_dir/motor-styles.css
+++ b/src/main/webapp/resources/css_dir/motor-styles.css
@@ -152,7 +152,9 @@
   .contact-form .mdl-textfield--floating-label.is-invalid .mdl-textfield__label {
     color: #ccc; }
   .contact-form .mdl-textfield--floating-label.is-dirty .mdl-textfield__label {
-    display: none; }
+    color: #ff8200;
+    font-size: 12px !important;
+    top: 1px !important; }
   .contact-form .help-block-wrap {
     position: relative; }
   .contact-form .help-block {
@@ -636,10 +638,10 @@
     left: 50%;
     margin-left: -485px; }
 
-  .motor-landing .featured > .row > div > .row {
+  .motor-landing #featured > .row > div > .row {
     height: 650px; }
 
-  body.chin .motor-landing .featured > .row > div > .row {
+  body.chin .motor-landing #featured > .row > div > .row {
     height: 650px; }
 
   .plan-panel-content {
@@ -668,10 +670,10 @@
   .motor-landing .motor-landing .featured.no-border > .row > div > .row {
     padding-top: 0; }
 
-  .motor-landing .featured > .row > div > .row {
+  .motor-landing #featured > .row > div > .row {
     height: 800px; }
 
-  body.chin .motor-landing .featured > .row > div > .row {
+  body.chin .motor-landing #featured > .row > div > .row {
     height: 750px; }
 
   .plan-panel-content {
