--- a/src/main/webapp/resources/sass/desktop/motor/_landing.scss
+++ b/src/main/webapp/resources/sass/desktop/motor/_landing.scss
@@ -3,12 +3,12 @@
     left: 50%;    
     margin-left: -485px;
 }
-.motor-landing .featured > .row > div > .row{
+.motor-landing #featured > .row > div > .row{
 height: 650px;
 }
 
 body.chin{ 
-.motor-landing .featured > .row > div > .row{
+.motor-landing #featured > .row > div > .row{
 height: 650px;
 }
 }
