--- a/src/main/webapp/resources/sass/mobile/motor/_landing.scss
+++ b/src/main/webapp/resources/sass/mobile/motor/_landing.scss
@@ -10,12 +10,12 @@
     }
 }
 
-.motor-landing .featured > .row > div > .row{
+.motor-landing #featured > .row > div > .row{
 height: 800px;
 }
 
 body.chin{ 
-.motor-landing .featured > .row > div > .row{
+.motor-landing #featured > .row > div > .row{
 height: 750px;
 }
 }
